--- a/main.html
+++ b/main.html
@@ -771,7 +771,7 @@
                         <div class="socials">
                             <a href="https://wa.me/6596723481/" target="_blank"><i class="fa fa-whatsapp"></i></a>
                             <a href="https://t.me/Jazereel/" target="_blank"><i class="fa fa-telegram"></i></a>
-                            <a href="https://github.com/nnk95/" target="_blank"><i class="fa fa-github"></i></a>
+                            <a href="https://github.com/reikolydia/" target="_blank"><i class="fa fa-github"></i></a>
                         </div>
                     </div>
                 </div>
