Updated linkedin, file hashes

--- a/main.html
+++ b/main.html
@@ -771,6 +771,7 @@
                         <div class="socials">
                             <a href="https://wa.me/6596723481/" target="_blank"><i class="fa fa-whatsapp"></i></a>
                             <a href="https://t.me/Jazereel/" target="_blank"><i class="fa fa-telegram"></i></a>
+                            <a href="https://www.linkedin.com/in/jazereel-lydia-goh-reiko/" target="_blank"><i class="fa fa-linkedin"></i></i></a>
                             <a href="https://github.com/reikolydia/" target="_blank"><i class="fa fa-github"></i></a>
                         </div>
                     </div>
