--- a/hash.html
+++ b/hash.html
@@ -114,23 +114,78 @@
               
               }
               </script>
-    
+    <style>
+      h3 {
+        line-height: 40%;
+      }
+      h2 {
+        line-height: 30%;
+      }
+    </style>
+
   </head>
   <body style="text-align: center;">
-    <h1>Enter the url of the file:</h1>    
+    <h3><pre>
+      <!-- https://onlineasciitools.com/convert-text-to-ascii-art -->
+      <!-- DOH -->
+      oooooooooooo ooooo ooooo        oooooooooooo    ooooo   ooooo       .o.        .oooooo..o ooooo   ooooo oooooooooooo ooooooooo.   <br>
+      `888'     `8 `888' `888'        `888'     `8    `888'   `888'      .888.      d8P'    `Y8 `888'   `888' `888'     `8 `888   `Y88. <br>
+       888          888   888          888             888     888      .8"888.     Y88bo.       888     888   888          888   .d88' <br>
+       888oooo8     888   888          888oooo8        888ooooo888     .8' `888.     `"Y8888o.   888ooooo888   888oooo8     888ooo88P'  <br>
+       888    "     888   888          888    "        888     888    .88ooo8888.        `"Y88b  888     888   888    "     888`88b.    <br>
+       888          888   888       o  888       o     888     888   .8'     `888.  oo     .d8P  888     888   888       o  888  `88b.  <br>
+      o888o        o888o o888ooooood8 o888ooooood8    o888o   o888o o88o     o8888o 8""88888P'  o888o   o888o o888ooooood8 o888o  o888o <br>
+    </pre></h3>
+    <h1>Paste the URL to file:</h1>
     <input id="url-input" type="text" oninput="CreateHashMD5(); CreateHashSHA1(); CreateHashSHA3512()" style="width: 400px">
-    <br>
-    <h2>MD5 hash:</h2>
+    <br><br>
+    <h2><pre>
+      <!-- COLOSSAL -->
+      888b     d888 8888888b.  888888888  <br>
+      8888b   d8888 888  "Y88b 888        <br>
+      88888b.d88888 888    888 888        <br>
+      888Y88888P888 888    888 8888888b.  <br>
+      888 Y888P 888 888    888      "Y88b <br>
+      888  Y8P  888 888    888        888 <br>
+      888   "   888 888  .d88P Y88b  d88P <br>
+      888       888 8888888P"   "Y8888P"  <br>
+    </pre></h2>
+    <h3>
     <div id="hash-result-md5">
     </div>
+    </h3>
       <br>
-    <h2>SHA-1 hash:</h2>
+    <h2><pre>
+      <!-- COLOSSAL -->
+       .d8888b.  888    888        d8888  d888   <br>
+      d88P  Y88b 888    888       d88888 d8888   <br>
+      Y88b.      888    888      d88P888   888   <br>
+       "Y888b.   8888888888     d88P 888   888   <br>
+          "Y88b. 888    888    d88P  888   888   <br>
+            "888 888    888   d88P   888   888   <br>
+      Y88b  d88P 888    888  d8888888888   888   <br>
+       "Y8888P"  888    888 d88P     888 8888888 <br>
+    </pre></h2>
+    <h3>
     <div id="hash-result-sha-1">
     </div>
+    </h3>
       <br>
-    <h2>SHA-3:512 hash:</h2>
+    <h2><pre>
+      <!-- COLOSSAL -->
+       .d8888b.  888    888        d8888  .d8888b.         888888888   d888    .d8888b.  <br>
+      d88P  Y88b 888    888       d88888 d88P  Y88b        888        d8888   d88P  Y88b <br>
+      Y88b.      888    888      d88P888      .d88P        888          888          888 <br>
+       "Y888b.   8888888888     d88P 888     8888"         8888888b.    888        .d88P <br>
+          "Y88b. 888    888    d88P  888      "Y8b.             "Y88b   888    .od888P"  <br>
+            "888 888    888   d88P   888 888    888 888888        888   888   d88P"      <br>
+      Y88b  d88P 888    888  d8888888888 Y88b  d88P        Y88b  d88P   888   888"       <br>
+       "Y8888P"  888    888 d88P     888  "Y8888P"          "Y8888P"  8888888 888888888  <br>
+    </pre></h2>
+    <h3>
     <div id="hash-result-sha-3-512">
     </div>
+    </h3>
 		
   </body>
 </html>
