--- a/main.html
+++ b/main.html
@@ -825,5 +825,9 @@
     </div>
     <!--Footer Area Ends-->
     
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "3094b6c94fd041d9952a6fe7cb115818"}'></script>
+<!-- End Cloudflare Web Analytics -->
+
 </body>
 </html>
