--- a/index.html
+++ b/index.html
@@ -48,5 +48,9 @@
   </div>
 </div>
 
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "3094b6c94fd041d9952a6fe7cb115818"}'></script>
+<!-- End Cloudflare Web Analytics -->
+
 </body>
 </html>
