updates to main

--- a/main.html
+++ b/main.html
@@ -714,7 +714,7 @@
                     <div class="single-contact text-center wow fadeInDown" data-wow-delay="0.8s">
                         <i class="fa fa-envelope-o"></i>
                         <h2>Email</h2>
-                        <p><a href="mailto:reiko@reikolydia.xyz" target="_blank">REIKO@REIKOLYDIA.XYZ</a></p> 
+                        <p><a href="mailto:web.contact@reikolydia.xyz" target="_blank">WEB.CONTACT@REIKOLYDIA.XYZ</a></p> 
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -726,6 +726,7 @@
                             <a href="https://t.me/Jazereel/" target="_blank"><i class="fa fa-telegram"></i></a>
                             <a href="https://www.linkedin.com/in/jazereel-lydia-goh-reiko/" target="_blank"><i class="fa fa-linkedin"></i></i></a>
                             <a href="https://github.com/reikolydia/" target="_blank"><i class="fa fa-github"></i></a>
+                            <a href="https://soundcloud.com/simplexrevelation/" target="_blank"><i class="fa fa-soundcloud"></i></a>
                         </div>
                     </div>
                 </div>
@@ -771,7 +772,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-                    <p>&copy; v2 2021 - <a href="mailto:reiko@reikolydia.xyz" target="_blank">JAZEREEL</a></p>
+                    <p>&copy; v2 2021 - <a href="mailto:web.contact@reikolydia.xyz" target="_blank">JAZEREEL</a></p>
                 </div>
             </div>
         </div>
