--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div id="particles">
   <div id="intro">
-    <h1 class="disableselect"><img src="images/main/mainlogo.png" draggable="false"/><br>v2</h1>
+    <h1 class="disableselect"><img src="images/main/mainlogo.png" draggable="false"/><br>v3</h1>
     <!--
     <div id="container">
       <div id="LeftArrows">
@@ -43,7 +43,7 @@
       </div>
     </div>
   -->
-    <p class="disableselect"><a href="main.html">ENTER</a></p>
+    <p class="disableselect"><a href="/images/about/JazereelGoh_2022.pdf">COMING SOON</a></p>
 
   </div>
 </div>
