--- a/hash.html
+++ b/hash.html
@@ -187,5 +187,9 @@
     </div>
     </h3>
 		
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "ff5eb28e00604e1483bb1ed66bb4eaeb"}'></script>
+    <!-- End Cloudflare Web Analytics -->
+
   </body>
 </html>
