--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     </div>
   -->
     <p class="disableselect"><a href="/images/about/JazereelGoh_2022.pdf">COMING SOON</a></p>
+    <h2 class="disableselect"><a href="/main.html">v2</a></h2><br>
 
   </div>
 </div>
